# dagster-meltano-pipelines

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  instructions.md  logs.sql  pyproject.toml  ruff.toml  tox.ini
.github/workflows/: build.yml  ci.yml  tox.yml
src/dagster_meltano_pipelines/: __init__.py  component.py  core.py  errors.py  meltano_project.py  project.py  resource.py  resources.py  scaffolder.py
src/dagster_meltano_pipelines/components/meltano_pipeline/: __init__.py  component.py  scaffolder.py
tests/: test_core.py  test_error_handling.py  test_meltano_run_config.py  test_meltano_run_flags.py  test_pipeline_env.py  test_process_meltano_stdout.py  test_resources.py  test_ssh_config.py  test_ssh_key_collection.py
