[project]
name = "dagster-meltano-pipelines"
version = "0.1.0"
description = "Dagster Components for Meltano"
readme = "README.md"
authors = [
    { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" }
]
license = "MIT"
license-files = [
    "LICENSE",
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster>=1.10.19",
    "meltano>=3.6,<3.9",
    "orjson>=3.10.18",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.2",
    "typing-extensions>=4.5; python_version < '3.12'",
]

[project.entry-points]
"dagster_dg_cli.registry_modules" = { dagster_meltano_pipelines = "dagster_meltano_pipelines" }

[dependency-groups]
dev = [
    { include-group = "testing" },
    { include-group = "typing" },
    "dagster-dg-cli[local]>=1.10.19",
]
testing = [
    "pytest>=8.4",
]
typing = [
    "mypy>=1.16.0",
    "types-pyyaml>=6.0.12.20250516",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "A",
    "B",
    "I",
    "ICN",
    "TC",
]

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["dagster"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
dagster = "dg"

[tool.tox]
min_version = "4.22"
env_list = [
    "type",
    "3.12",
    "3.11",
    "3.10",
    "3.9",
]
requires = [ "tox>=4.22", "tox-uv" ]

[tool.tox.env_run_base]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.type]
dependency_groups = [ "testing", "typing" ]
commands = [ [ "mypy", "--strict", { replace = "posargs", default = [ "src/dagster_meltano_pipelines", "tests" ], extend = true } ] ]
