[project]
name = "dagster-meltano-pipelines"
dynamic = ["version"]
description = "Dagster Components for Meltano"
readme = "README.md"
authors = [
    { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" }
]
license = "MIT"
license-files = [
    "LICENSE",
]
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.10.19",
    "meltano>=3.6",
    "orjson>=3.10.18",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.2",
    "typing-extensions>=4.5; python_version < '3.12'",
]

[project.entry-points]
"dagster_dg_cli.registry_modules" = { dagster_meltano_pipelines = "dagster_meltano_pipelines" }

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typing" },
    "dagster-dg-cli>=1.10.19",
]
lint = [
    "ruff>=0.12.3",
]
test = [
    "pytest>=8.4",
]
typing = [
    "mypy>=1.16.0",
    "ty>=0.0.1a23",
    "types-pyyaml>=6.0.12.20250516",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
fallback-version = "0.0.0"
source = "vcs"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "A",      # flake8-builtins
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "COM",    # flake8-commas
    "DTZ",    # flake8-datetimez
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "G",      # flake8-logging-format
    "I",      # isort
    "ICN",    # flake8-import-conventions
    "N",      # pep8-naming
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "PTH",    # flake8-use-pathlib
    "Q",      # flake8-quotes
    "RET",    # flake8-return
    "RSE",    # flake8-raise
    "RUF",    # Ruff-specific rules
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "TC",     # flake8-type-checking
    "TID",    # flake8-tidy-imports
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
    "YTT",    # flake8-2020
]
ignore = [
    "COM812",  # Trailing comma missing (conflicts with formatter)
    "PTH",     # flake8-use-pathlib (defer pathlib migration)
    "SIM115",  # Use context manager for opening files (sometimes intentional)
    "SIM117",  # Nested with statements (sometimes intentional)
    "UP007",   # Union to | syntax (keep for type checker compatibility)
]

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["dagster"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
dagster = "dg"

[tool.tox]
min_version = "4.22"
env_list = [
    "lint",
    "type",
    "3.13",
    "3.12",
    "3.11",
    "3.10",
]
requires = [ "tox>=4.22", "tox-uv" ]

[tool.tox.env_run_base]
dependency_groups = [ "test" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.lint]
dependency_groups = [ "lint" ]
commands = [ [ "ruff", "check", "--fix" ], [ "ruff", "format" ] ]

[tool.tox.env.type]
dependency_groups = [ "test", "typing" ]
commands = [
    [ "mypy", "--strict", { replace = "posargs", default = [ "src/dagster_meltano_pipelines", "tests" ], extend = true } ],
    [ "ty", "check", { replace = "posargs", default = [ "src/dagster_meltano_pipelines", "tests" ], extend = true } ],
]

[tool.uv.sources]
meltano = { git = "https://github.com/meltano/meltano.git" }
